# expense_tracker

./: .gitignore  README.md  funcs.py  jsonRead.py  main.py  pyproject.toml
expense_tracker/: .gitignore  colors.py  funcs.py  main.py
