[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "0.1.0"
description = "CLI tool for financial expense management"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Seu Nome" }
]

dependencies = [
    "tabulate",
    "plotext"
]

[project.scripts]
exp = "expense_tracker.main:main"

[tool.setuptools]
packages = ["expense_tracker"]